app/app/src/styles/style.css
---
---

html, body {
	height: 100%;
}
body {
	font-family: 'Roboto', sans-serif;
	background: #204060;
	display: flex;
	margin: 0;
	padding: 0;
	flex-direction: column;
	overflow-x: hidden;
	color: #fff;
}

a { color: #50a0f0 }
a:hover { color: #4080c0 }

p img { height: 1rem }

@media (min-width: 768px) { #warn-invalid-modal .modal-dialog { max-width: 700px } }
#warn-invalid-modal .modal-header,
#warn-invalid-modal .modal-body { color: #212529 } /* Default black color from Bootstrap */
#warn-invalid-modal code {
	background-color: rgba(0,0,0,.05);
	padding: 2px 4px;
	color: inherit;
	border-radius: 3px;
}
/* #warn-invalid-modal h5 { font-size:  } */

#navbar {
	background: #183048;
	display: initial; /* Toggles off `display: flex` from Bootstrap */
}
#navbar .dropdown-menu {
    background: #285078;
}
#navbar .dropdown-menu .dropdown-item {
    color: #fff;
}
#navbar .dropdown-menu .dropdown-item:hover,
#navbar .dropdown-menu .dropdown-item:focus {
    background: #306090;
}
#navbar .dropdown-menu .dropdown-item:active {
    background: #3870a8;
}
#navbar .dropdown-menu .dropdown-item.active {
    background: #4080c0;
}

#newsline {
	background: #1c3854;
	padding: .75rem 1rem;
}

#main {
	max-width: 960px;
	width: 100%;
	margin: 0 auto;
	padding: 20px 0;
	flex: 1 0;
}
#main.smallscreen {
	text-align: center;
}
#main h1 { font-size: 4em; font-weight: bold }
#main.smallscreen h1 { font-size: 3em }
#main.smallscreen .tiles-grid {
	margin: 0 auto;
	text-align: initial;
}

#main .container > .tiles-grid { margin-bottom: 1rem }
#main .tiles-grid .invalid:before {
	/* background: ; */
	background-image: url({{ '/assets/missing.png' | relative_url }});
	background-size: cover;
	position: absolute;
	width: 100%;
	height: 100%;
	content: '';
	opacity: .2;
}
#main .tiles-grid .tile-small .branding-icon,
#main .tiles-grid .tile-small-wide .branding-icon,
#main .tiles-grid .tile-medium .branding-icon,
#main .tiles-grid .tile-wide .branding-icon,
#main .tiles-grid .tile-large .branding-icon,
#main .tiles-grid .tile-app .branding-icon {
	position: absolute;
	left: 0;
	top: 0;
	right: 0;
	padding: 5px 5px 0;
	text-align: right;
	font-size: 1rem;
	font-weight: 500;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	z-index: 2;
}

#footer {
	background: rgba(0, 0, 0, .1);
	padding: 20px;
	flex-shrink: 0;
}
@media (min-width: 992px) {
	#footer .container {
		max-width: 960px;
	}
}
#footer ul { padding: 0 }
#footer ul > li { display: inline-block }
#footer ul > li + li { margin-left: 5px }
#footer ul > li + li:before { content: '|'; margin-right: 10px }

*:last-child { margin-bottom: 0 }

